Fri Feb 19 08:53:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
          Always generate the state connector header, this needs more tweaks
          in the near future

Thu Feb 18 22:53:29 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/include/ast_root.h:
        * TAO_IDL/include/ast_valuebox.h:
        * TAO_IDL/include/ast_module.h:
        * TAO_IDL/include/ast_union_label.h:
        * TAO_IDL/include/ast_union.h:
        * TAO_IDL/include/ast_interface_fwd.h:
        * TAO_IDL/include/ast_structure.h:
        * TAO_IDL/include/ast_component_fwd.h:
        * TAO_IDL/include/utl_tmpl/UTL_Scope_T.cpp:
        * TAO_IDL/include/ast_string.h:
        * TAO_IDL/include/ast_decl.h:
        * TAO_IDL/include/ast_factory.h:
        * TAO_IDL/include/ast_valuetype.h:
        * TAO_IDL/include/ast_argument.h:
        * TAO_IDL/include/ast_eventtype.h:
        * TAO_IDL/include/ast_native.h:
        * TAO_IDL/include/ast_union_fwd.h:
        * TAO_IDL/include/ast_home.h:
        * TAO_IDL/include/ast_structure_fwd.h:
        * TAO_IDL/include/ast_enum_val.h:
        * TAO_IDL/include/ast_sequence.h:
        * TAO_IDL/include/ast_valuetype_fwd.h:
        * TAO_IDL/include/ast_eventtype_fwd.h:
        * TAO_IDL/include/ast_exception.h:
        * TAO_IDL/include/ast_attribute.h:
        * TAO_IDL/include/ast_enum.h:
        * TAO_IDL/include/ast_union_branch.h:
        * TAO_IDL/include/ast_type.h:
        * TAO_IDL/include/ast_field.h:
        * TAO_IDL/include/ast_constant.h:
        * TAO_IDL/include/ast_interface.h:
        * TAO_IDL/include/ast_operation.h:
        * TAO_IDL/include/ast_component.h:
        * TAO_IDL/include/ast_concrete_type.h:
        * TAO_IDL/include/ast_predefined_type.h:
        * TAO_IDL/include/ast_array.h:
        * TAO_IDL/be/be_union.cpp:
        * TAO_IDL/be/be_interface_fwd.cpp:
        * TAO_IDL/be/be_attribute.cpp:
        * TAO_IDL/be/be_factory.cpp: