@@ -1,3 +1,10 @@
+Fri Feb 19 12:54:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp:
+        * TAO_IDL/be/be_visitor_connector/connector_dds_exs.cpp:
+          Generate an additional boolean that is used to indicate
+          whether we have a fixed or non fixed type
+
 Fri Feb 19 08:53:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * TAO_IDL/be/be_codegen.cpp:
